Revision history for {{$dist->name}}

{{$NEXT}}
          - make the -description option mandatory, for more readable prompt
            strings
          - prompt with just the description, as the feature name is usually
            very confusing for the user

0.018     2014-11-01 03:21:38Z
          - temporarily disable a test that relies on CPAN::Meta::Merge
            behaviour that does not yet exist

0.017     2014-09-19 06:16:11Z
          - new -prompt feature (enabled by default for 'required' feature
            prereqs), which interactively prompts the user about the feature

0.016     2014-09-06 22:39:49Z
          - now *properly* allowing unrecognized options (0.015)

0.015     2014-09-06 07:46:34Z
          - now allowing unrecognized options, with a warning, rather than
            dying (allows proactively releasing distributions using
            not-yet-implemented options)

0.014     2014-05-18 05:04:39Z
          - fix examples to use working code, that doesn't violate naming
            constraints for features (RT#94130)

0.013     2014-02-19 03:48:35Z
          - bump the prereq on JSON::Any, to ensure we know how to handle
            JSON::XS 3.x

0.012     2014-01-29 04:09:38Z
          - report more installed versions, as an attempt to debug some odd
            cpantesters failures

0.011     2014-01-21 04:10:42Z
          - new -require_develop option (which has always defaulted to true)

0.010     2014-01-18 22:01:56Z
          - fix config section in generated metadata that was not
            spec-compliant

0.009     2014-01-18 20:41:13Z
          - include our full config data in target dist's metadata

0.008     2013-11-30 17:26:03Z
          - re-release to fix compile test

0.007     2013-09-11 05:03:52Z
          - warnings tests bypassed during installation

0.006     2013-09-08 17:53:53Z
          - add test requirement on the minimal Config::MVP needed to handle
            an edge case that we test our handling of